[DetailedWorker] Activity for detailed worker
The simple skeleton of the activity for displaying the detailed indormation of the worker clicked

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -181,5 +181,6 @@
     <string name="management_vendor_text">Vendor Management</string>
     <string name="management_add_edit_text_hint">Add %1$s</string>
     <string name="management_add_button_text">Add</string>
+    <string name="title_activity_detail_worker">DetailWorkerActivity</string>
 
 </resources>
