[DetailedWorker] Add tabs and TaskScheduleFragment
1. Add tabs in detailed worker page
2. Add fragment to display the schedule of the worker

--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -172,4 +172,10 @@
     <string name="management_add_edit_text_hint">新增%1$s</string>
     <string name="management_add_button_text">新增</string>
 
+    <!-- Detailed worker -->
+    <string name="detailed_worker_task_schedule">工作排程</string>
+    <string name="detailed_worker_task_items">工作項目</string>
+    <string name="detailed_worker_task_log">工作記錄</string>
+    <string name="detailed_worker_worker_log">員工紀錄</string>
+
 </resources>
