--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -171,7 +171,7 @@
     <string name="add_case_save_case_button_text">Save Case</string>
     <string name="add_case_save_template_button_text">Save Template</string>
 
-    <!-- Managemant -->
+    <!-- Management -->
     <string name="management_actionbar_title_text">%1$s Management</string>
     <string name="management_equipment_text">Equipment Management</string>
     <string name="management_factory_text">Factory Management</string>
@@ -188,7 +188,10 @@
     <string name="detailed_worker_task_items">Task Items</string>
     <string name="detailed_worker_task_log">Task Log</string>
     <string name="detailed_worker_worker_log">Worker Log</string>
-    <string name="detailed_worker_current_task_items">Current task items</string>
+    <string name="detailed_worker_current_task_text">Current task items</string>
+    <string name="detailed_worker_task_schedule_complete_task_button">Complete task</string>
+    <string name="detailed_worker_task_schedule_add_warning_button">Add warning</string>
+    <string name="detailed_worker_task_schedule_manage_warning_button">Manage warning</string>
 
     <!-- Status Fragment -->
     <string name="status_string_worker">Worker %s records</string>
