--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -177,5 +177,10 @@
     <string name="detailed_worker_task_items">工作項目</string>
     <string name="detailed_worker_task_log">工作記錄</string>
     <string name="detailed_worker_worker_log">員工紀錄</string>
+    <string name="detailed_worker_current_task_items">目前工作</string>
+
+    <!-- Status Fragment -->
+    <string name="status_string_worker">員工 %s 的紀錄</string>
+    <string name="status_string_task">工作項目 %s 的記錄</string>
 
 </resources>
