[LoadingData][Preload] Handle no internet connection situation when we load the data from server

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,8 @@
     <string name="date_format_string">%1$s/%2$s/%3$s</string>
     <string name="edit">Edit</string>
     <string name="cancel">Cancel</string>
+    <string name="no_internet_connection">Check your connection and try again.</string>
+    <string name="retry">Retry</string>
 
     <!-- Assign task -->
     <string name="task_case_progress_text">Case Progress</string>
