--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -2,6 +2,8 @@
 
     <string name="edit">編輯</string>
     <string name="cancel">取消</string>
+    <string name="no_internet_connection">請檢查您的連線狀態，然後再試一次。</string>
+    <string name="retry">重試</string>
 
     <!-- Assign task -->
     <string name="task_case_progress_text">案件進度</string>
