--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,8 @@
     <string name="task_progress_working">Working</string>
     <string name="task_progress_pause">Pause</string>
     <string name="task_progress_finish">Finish</string>
+    <string name="task_card_no_equipment">No equipment</string>
+    <string name="task_card_no_worker">No worker</string>
     <string name="worker_action_start">Start for all</string>
     <string name="worker_card_next_task_text">Next task</string>
     <string name="worker_card_overtime_text">Overtime</string>
