--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -206,6 +206,7 @@
     <string name="detailed_worker_task_schedule_header_expected_completed_time">Expected completed time</string>
     <string name="detailed_worker_task_schedule_header_error">Error</string>
     <string name="detailed_worker_task_schedule_header_warnings">Warnings</string>
+    <string name="detailed_worker_task_schedule_listview_divider_text">Finish by today</string>
 
     <!-- Status Fragment -->
     <string name="status_string_worker">Worker %s records</string>
