--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -1,5 +1,6 @@
 <resources>
 
+    <string name="action_refresh">更新</string>
     <string name="edit">編輯</string>
     <string name="cancel">取消</string>
     <string name="no_internet_connection">請檢查您的連線狀態，然後再試一次。</string>
