--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
 
     <string name="app_name">WorkFlowAndroid</string>
     <string name="action_settings">Settings</string>
+    <string name="action_refresh">Refresh</string>
     <string name="date_format_string">%1$s/%2$s/%3$s</string>
     <string name="edit">Edit</string>
     <string name="cancel">Cancel</string>
