--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="cancel">Cancel</string>
     <string name="no_internet_connection">Check your connection and try again.</string>
     <string name="retry">Retry</string>
+    <string name="processing">Processing</string>
 
     <!-- Task status -->
     <string name="task_status_unclaimed">Not start</string>
