[InfoFragment] Update warning listview

--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -228,5 +228,15 @@
     <string name="info_frag_warning_items">警訊項目</string>
     <string name="info_frag_checked_items">等待審核</string>
     <string name="info_frag_leave_workers">請假人員（七日內）</string>
+    <string name="info_frag_list_delay_time">延遲時間</string>
+    <string name="info_frag_list_case_name">案件名稱</string>
+    <string name="info_frag_list_worker">負責人</string>
+    <string name="info_frag_list_delay_time_next">下次通知時間</string>
+    <string name="info_frag_list_delay_time_add">增加通知時間</string>
+    <string name="info_frag_list_warning_title">警訊名稱</string>
+    <string name="info_frag_list_checked_action">審核</string>
+    <string name="info_frag_list_leave_workers_type">假別</string>
+    <string name="info_frag_list_leave_workers_worker">請假人員</string>
+    <string name="info_frag_list_leave_workers_date">日期</string>
 
 </resources>
