--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -239,5 +239,15 @@
     <string name="info_frag_warning_items">Warning items</string>
     <string name="info_frag_checked_items">Checked items</string>
     <string name="info_frag_leave_workers">Leaving workers (in 7 days)</string>
+    <string name="info_frag_list_delay_time">Delay time</string>
+    <string name="info_frag_list_case_name">Case name</string>
+    <string name="info_frag_list_worker">Worker</string>
+    <string name="info_frag_list_delay_time_next">Next noti. time</string>
+    <string name="info_frag_list_delay_time_add">Add noti. time</string>
+    <string name="info_frag_list_warning_title">Warning title</string>
+    <string name="info_frag_list_checked_action">Action</string>
+    <string name="info_frag_list_leave_workers_type">Type</string>
+    <string name="info_frag_list_leave_workers_worker">Worker</string>
+    <string name="info_frag_list_leave_workers_date">Date</string>
 
 </resources>
