--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -227,27 +227,25 @@
     <string name="status_string_worker">Worker %s records</string>
     <string name="status_string_task">Task %s records</string>
 
-    <!-- InfoFragment -->
-    <string name="info_frag_menu">Menu</string>
-    <string name="info_frag_title">DashBoard</string>
-    <string name="info_frag_noti">Notifications</string>
-    <string name="info_frag_cnt_worker_on">Working workers</string>
-    <string name="info_frag_cnt_worker_overtime">Overtime workers</string>
-    <string name="info_frag_cnt_warning">Warnings</string>
-    <string name="info_frag_cost">Costs</string>
-    <string name="info_frag_delay_items">Delay items</string>
-    <string name="info_frag_warning_items">Warning items</string>
-    <string name="info_frag_checked_items">Checked items</string>
-    <string name="info_frag_leave_workers">Leaving workers (in 7 days)</string>
-    <string name="info_frag_list_delay_time">Delay time</string>
-    <string name="info_frag_list_case_name">Case name</string>
-    <string name="info_frag_list_worker">Worker</string>
-    <string name="info_frag_list_delay_time_next">Next noti. time</string>
-    <string name="info_frag_list_delay_time_add">Add noti. time</string>
-    <string name="info_frag_list_warning_title">Warning title</string>
-    <string name="info_frag_list_checked_action">Action</string>
-    <string name="info_frag_list_leave_workers_type">Type</string>
-    <string name="info_frag_list_leave_workers_worker">Worker</string>
-    <string name="info_frag_list_leave_workers_date">Date</string>
+    <!-- Main information -->
+    <string name="main_information_board_0">0</string>
+    <string name="main_information_worker_on">Working workers</string>
+    <string name="main_information_worker_overtime">Overtime workers</string>
+    <string name="main_information_warning">Warnings</string>
+    <string name="main_information_cost">Costs</string>
+    <string name="main_information_delay_list_title">Delay items</string>
+    <string name="main_information_warning_list_title">Warning items</string>
+    <string name="main_information_waiting_review_list_title">Checked items</string>
+    <string name="main_information_leave_workers_list_title">Leaving workers (in 7 days)</string>
+    <string name="main_information_list_delay_time">Delay time</string>
+    <string name="main_information_list_case_name">Case name</string>
+    <string name="main_information_list_worker">Worker</string>
+    <string name="main_information_list_delay_time_next">Next noti. time</string>
+    <string name="main_information_list_delay_time_add">Add noti. time</string>
+    <string name="main_information_list_warning_title">Warning title</string>
+    <string name="main_information_list_checked_action">Action</string>
+    <string name="main_information_list_leave_workers_type">Type</string>
+    <string name="main_information_list_leave_workers_worker">Worker</string>
+    <string name="main_information_list_leave_workers_date">Date</string>
 
 </resources>
